# ariadne-graph

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  VERIFICATION.md  check_codex_review.py  pyrightconfig.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: SPEC.md  architecture.md  change-briefing-recipe.md  code_hygiene_review.agent.final.base.docx  code_hygiene_review.agent.final.converted.md  code_hygiene_review.agent.final.footnote.docx  code_hygiene_review.agent.final.md  code_hygiene_review.agent.outline.md  code_hygiene_review_sec01.md  code_hygiene_review_sec02.md  code_hygiene_review_sec03.md  code_hygiene_review_sec04.md  code_hygiene_review_sec05.md  graph-store-design.md  implementation-plan.md  implementation-state.md  linear-execution-plan.md  lumen-integration-plan.md  migration-plan.md  plan.md  project-origin.md  python-adapter-parity.md  review-gap-remediation-plan.md  scip-typescript-integration-plan.md  static-analysis-limitations.md  typescript-adapter-plan.md
docs/plans/: 2026-07-09-browser-graph-view-design.md  2026-07-10-pack-coupling-layout-design.md  2026-07-10-pack-coupling-layout-implementation.md  2026-07-11-architecture-hygiene-analysis-design.md
project/: Dockerfile  README.md  pyproject.toml  requirements-all.txt  requirements.txt  run-tests.sh
project/.github/workflows/: ci.yml
project/src/ariadne_graph/: cli.py
project/src/ariadne_graph/core/: architecture.py  architecture_config.py  auto_sync.py  capabilities.py  communities.py  config.py  diagnostics.py  discovery.py  embeddings.py  file_watcher.py  freshness.py  incremental_sync.py  models.py  retrieval.py  search.py  snippets.py  watch_sync.py
project/src/ariadne_graph/graphstores/: __init__.py  base.py  factory.py  lumen.py  memory.py  neo4j.py  sqlite.py
project/src/ariadne_graph/languages/: __init__.py  base.py
project/src/ariadne_graph/languages/python_ast/: __init__.py  adapter.py  extractor.py  scip_indexer.py  scip_resolver.py
project/src/ariadne_graph/languages/typescript/: __init__.py  adapter.py  extractor.py  scip_enricher.py  scip_indexer.py  scip_parser.py  scip_proto_vendor.md  scip_translator.py  tsconfig.py
project/src/ariadne_graph/mcp/: fallbacks.py  schemas.py  server.py  tools.py
project/src/ariadne_graph/web/: __init__.py  queries.py  routes.py
project/src/ariadne_graph/web/static/: index.html
project/tests/: test_cli.py
project/tests/fixtures/ts_scip_project/: README.md  index.scip  package.json
project/tests/fixtures/ts_scip_project/src/: animal.ts  barrel.ts  dog.ts  main.ts  utils.ts
project/tests/test_acceptance/: test_dependency_fallbacks.py
project/tests/test_core/: test_arch_config.py  test_arch_query.py  test_architecture.py  test_architecture_memory_store.py  test_architecture_persist.py  test_architecture_scipless_fallback.py  test_auto_sync.py  test_capabilities.py  test_communities.py  test_config.py  test_consistency.py  test_discovery.py  test_file_watcher.py  test_freshness.py  test_hotspot_community.py  test_incremental_sync.py  test_public_surfaces.py  test_retrieval.py  test_search.py  test_watch_sync.py
project/tests/test_graphstores/: test_factory.py  test_lumen.py  test_memory.py  test_neo4j.py  test_sqlite.py
project/tests/test_mcp/: test_change_briefing.py  test_diagnostics_hygiene.py  test_no_sqlite_isinstance_gate.py  test_placement.py  test_server.py  test_wired_handlers.py
project/tests/test_python/: test_diagnostics.py  test_extractor.py  test_hardcase_call_resolution.py
project/tests/test_typescript/: test_extractor.py  test_scip_bridge.py  test_scip_codefile_preserved.py  test_scip_enricher_fallback.py  test_scip_external_collapse.py  test_scip_import_resolution.py  test_scip_indexer.py  test_scip_live_mixed_id.py  test_scip_local_scope.py  test_scip_mixed_id.py  test_scip_mobile_imports.py  test_scip_self_loops.py  test_scip_subproject_imports_e2e.py  test_tsconfig.py
project/tests/test_web/: pack_layout_invariants.mjs  test_queries.py
research/: code_hygiene_review_cross_verification.md  code_hygiene_review_dim01.md  code_hygiene_review_dim02.md  code_hygiene_review_dim03.md  code_hygiene_review_dim04.md  code_hygiene_review_dim05.md  code_hygiene_review_insight.md
scripts/: ariadne-daemon.sh
